[package]
default-run = "your_project_name"
name = "day_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
itertools = "0.2.2"

[[bin]]
name = "your_project_name"
path = "./src/main.rs"
